--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
         <div class="container">
             <h1 class="logo lg-heading text-light">🛩️AeroTravels</h1>                
             <ul class="nav-items">                
-                <li class="nav-item"><a href="./pricing.html">Contact</li></a>
+                <li class="nav-item"><a href="./contact.html">Contact</li></a>
                 <li class="nav-item"><a href="./about.html">About</li></a>                    
-                <li class="nav-item"><a href=".index.html">Home</li></a>
+                <li class="nav-item"><a href="./index.html">Home</li></a>
             </ul>                   
         </div>           
     </nav> 
@@ -41,10 +41,27 @@
            </div>
 
            <div class="counts">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
+                <div class="item item-1">
+                    <span>2500</span>
+                    <p>Travelled</p>
+                </div>
+                <div class="item item-2">
+                    <span>1800</span>
+                    <p>Places</p>
+                </div>
+                <div class="item item-3">
+                    <span>700</span>
+                    <p>Guides</p>
+                </div>
+                <div class="item item-4">
+                    <span>180</span>
+                    <p>Flights</p>
+                </div>
+           </div>
+
+           <div class="banner">
+               <p>What are you waiting for? Hurry Up, reach us now!</p> 
+               <a href="contact.html" class="btn-banner">Contact Us</a>
            </div>
         </div>
         
