--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,34 @@
         <div class="container">
             <h1 class="logo lg-heading text-light">🛩️AeroTravels</h1>                
             <ul class="nav-items">                
-                <li class="nav-item"><a href="./pricing.html">Contact</li></a>
+                <li class="nav-item"><a href="./contact.html">Contact</li></a>
                 <li class="nav-item"><a href="./about.html">About</li></a>                    
-                <li class="nav-item"><a href=".index.html">Home</li></a>
+                <li class="nav-item"><a href="./index.html">Home</li></a>
             </ul>                   
         </div>           
-    </nav>  
+    </nav> 
+   
+        <h2 class="heading">Need Help?<span> Contact Us </span> Now!</h2> 
+        <p class="para">Thankyou for your interest. Please fill out the form and we will get back to you regarding your concern. </p>
+       
+            <div class="outer">
+                <div class="inner">
+
+                <form action="">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                    <input type="text" placeholder="Phone Number">
+                    <input type="text" placeholder="E-mail">
+                    <textarea name="" id="" cols="30" rows="6" placeholder="Write your Query" ></textarea>
+                    <button class="submit-btn ">Send Message</button>
+                    <p class="text-gray">The information you provided is safe with us.</p>
+                </form>
+                
+                <div class="contact">
+                    <img src="./img/con-img.png" alt=""class="img-contact">
+                    <h2>Get in Touch</h2>
+                </div>
+            </div>
+            </div>
 </body>
 </html>
