new changes committed

--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,26 @@
                     <input type="text" placeholder="E-mail">
                     <textarea name="" id="" cols="30" rows="6" placeholder="Write your Query" ></textarea>
                     <button class="submit-btn ">Send Message</button>
-                    <p class="text-gray">The information you provided is safe with us.</p>
+                    <p class="text-gray">The information you will  provide is safe with us.</p>
                 </form>
                 
                 <div class="contact">
-                    <img src="./img/con-img.png" alt=""class="img-contact">
-                    <h2>Get in Touch</h2>
+                    <img src="./img/cont.jpg" alt=""class="img-contact">
+                    <ul class="touch">
+                        <li><i class="fa-regular fa-phone"></i>+91 98889 56565</li>
+                        <li><i class="fa-regular fa-envelope"></i>support@aerotravels.in</li>
+                        <li><i class="fa-regular fa-location-dot"></i>#31 Eastern Mall, Delhi</li>
+                    </ul>
                 </div>
             </div>
             </div>
+            <footer class="footer">
+                <div class="social-links">
+                    <i class="fab fa-facebook fa-4x"></i>
+                    <i class="fab fa-twitter fa-4x"></i>
+                    <i class="fab fa-instagram fa-4x"></i>
+                </div>
+                <p>World Travel &copy; 2020, All Rights Reserved</p>
+             </footer>
 </body>
 </html>
