--- a/about.html
+++ b/about.html
@@ -66,5 +66,13 @@
         </div>
         
     </section>
+    <footer class="footer"></footer>
+        <div class="social-links">
+            <i class="fab fa-facebook fa-4x"></i>
+            <i class="fab fa-twitter fa-4x"></i>
+            <i class="fab fa-instagram fa-4x"></i>
+        </div>
+        <p>World Travel &copy; 2020, All Rights Reserved</p>
+     </footer>
 </body>
 </html>
